scripts/nullaway/original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8.txt
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/Examples.java:52: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                if (key.equals(tag)) return handler; else return null;
                                                          ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/Fns.java:64: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        if (theLookup == null) return null;
                               ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/Fns.java:70: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/FressianReader.java:35: error: [NullAway] initializer method does not guarantee @NonNull field byteBuffer (line 25) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FressianReader(InputStream is, ILookup<Object, ReadHandler> handlerLookup, boolean validateAdler) {
           ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/FressianReader.java:28: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(is, null, true);
                 ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/FressianReader.java:685: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/RawInput.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.cis = null;
                     ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/CachingLookup.java:30: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        val = lookup.valAt(null);
                           ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/ChainedLookup.java:24: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/Handlers.java:72: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        installHandler(handlers, null, "null", new WriteHandler() {
                                 ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/InheritanceLookup.java:27: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/InheritanceLookup.java:39: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            case 0: return null;
                    ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/MapLookup.java:24: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return map.get(key);
        ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/impl/InterleavedIndexHopMap.java:232: error: [NullAway] dereferenced expression ((Number)ht.get(s)) is @Nullable
		if(i != ((Number)ht.get(s)).intValue())
		                           ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/handlers/WriteHandlerLookup.java:36: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/handlers/WriteHandlerLookup.java:39: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/FressianWriter.java:39: error: [NullAway] initializer method does not guarantee @NonNull field stringBuffer (line 28) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FressianWriter(OutputStream out, ILookup<Class, Map<String, WriteHandler>> userHandlers) {
           ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/FressianWriter.java:468: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return writeAs(null, o, cache);
                       ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/FressianWriter.java:472: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        return writeAs(null, o);
                       ^
    (see http://t.uber.com/nullaway )
../original/url57668a8619_Datomic_fressian_tgz-pJ8-org_fressian_ExamplesJ8/src/org/fressian/TaggedObject.java:21: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(tag, value, null);
                         ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
20 errors
